--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title>gh-pages template</title>
 </head>
 <body>
-	<script>server.js</script>
+	<script src='server.js'></script>
 </body>
 </html>
